Fix letter-spacing

--- a/app/assets/stylesheets/common/structure.scss
+++ b/app/assets/stylesheets/common/structure.scss
@@ -888,6 +888,7 @@ body {
                     display: block;
                     a {
                       color: #6d6e71;
+                      letter-spacing: 0;
                       margin: 0 0 8px;
                       display: block;
                     }
